hphp/hack/test/typecheck/inout/bad_inout_hint_parent5.php.exp
File "bad_inout_hint_parent5.php", line 11, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "bad_inout_hint_parent5.php", line 4, characters 42-44:
This is an inout parameter
File "bad_inout_hint_parent5.php", line 11, characters 36-38:
It is incompatible with a normal parameter
